FIX: simplificacando a aplicação